trying to fix horizontal scroll on mobile/tablet

--- a/styles/partials/_reuseableCode.scss
+++ b/styles/partials/_reuseableCode.scss
@@ -7,7 +7,9 @@ html {
     background-color: $black;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    width: 100%;
 }
+
 
 body, h1, h2, h3, ul, p {
     margin: 0;
